@@ -40,10 +40,12 @@ public class Util {
     }
 
     public static double invLerp(double a, double b, double t){
-        return clamp((t-a)/(b-a), 0, 1);
+        return clamp((t-a)/(b-a), 0, 1); //changed for Math.clamp() fixing
     }
-    public static double clamp(double val, double min, double max) {
-        return Math.max(min, Math.min(max, val));
+    public static double clamp(double val, double min, double max) { //changed for Math.clamp() fixing
+        return Math.max(min, Math.min(max, val)); //rationale: looked up what Math.clamp does 
+        // realized it returns the value if it is in the range, and returns the min or max if it isn't
+        // we implemented this using Math.max and Math.min 
     }
     public static boolean mouseClickWithinRange(int x, int y, int range){
         if(Math.pow(x,2)+Math.pow(y,2)<=(int)(Math.pow(range,2))){
